--- a/clusters/akslab/cluster-config/app-resources/api-portal/api-portal-tls-cert.yaml
+++ b/clusters/akslab/cluster-config/app-resources/api-portal/api-portal-tls-cert.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: api-portal
 spec:
   dnsNames:
-  - api-portal.ekslab1.tap.fynesy.com
+  - api-portal.gkelab1.tap.fynesy.com
   secretName: api-portal-tls-cert
   issuerRef:
     name: letsencrypt-production
