--- a/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/petclinic-gateway/petclinic-gateway-certificate.yaml
+++ b/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/petclinic-gateway/petclinic-gateway-certificate.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   dnsNames:
-  - petclinic.ekslab1.tap.fynesy.com
+  - petclinic.gkelab1.tap.fynesy.com
   secretName: petclinic-gateway-tls-cert
   issuerRef:
     name: letsencrypt-production
