--- a/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/petclinic-gateway/petclinic-gateway-httpproxy.yaml
+++ b/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/petclinic-gateway/petclinic-gateway-httpproxy.yaml
@@ -11,6 +11,6 @@ spec:
         - name: petclinic-gateway
           port: 80
   virtualhost:
-    fqdn: petclinic.ekslab1.tap.fynesy.com
+    fqdn: petclinic.gkelab1.tap.fynesy.com
     tls:
       secretName: petclinic-gateway-tls-cert
