--- a/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-certificate.yaml
+++ b/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-certificate.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   dnsNames:
-  - tdemo.ekslab1.tap.fynesy.com
+  - tdemo.gkelab1.tap.fynesy.com
   secretName: tdemo-gateway-tls-cert
   issuerRef:
     name: letsencrypt-production
