--- a/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-httpproxy.yaml
+++ b/clusters/akslab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-httpproxy.yaml
@@ -11,6 +11,6 @@ spec:
         - name: tdemo-gateway
           port: 80
   virtualhost:
-    fqdn: tdemo.ekslab1.tap.fynesy.com
+    fqdn: tdemo.gkelab1.tap.fynesy.com
     tls:
       secretName: tdemo-gateway-tls-cert
