--- a/clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-config.yaml
+++ b/clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/tdemo-gateway/tdemo-gateway-config.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   count: 1
-  host: tdemo1.gkelab1.tap.fynesy.com
+  host: tdemo1a.gkelab1.tap.fynesy.com
   api:
     serverUrl: https://tdemo.gkelab1.tap.fynesy.com
     title: Tanzu Demo APIs
